# AI3611

./: .gitignore  pyproject.toml
img_cap/: README.md  TODO.md  eval.py  evaluate.py  get_res.sh  main.py  models.py  run.sh  run_res.sh
img_cap/configs/: resnet.yaml  resnet101.yaml  resnet101_attention.yaml  resnet30k.yaml  resnet8k.yaml  resnet8k_256.yaml  resnet8k_512.yaml  vit.yaml  vit30k.yaml  vit30k_best.yaml  vit8k.yaml  vit8k_128.yaml  vit8k_256.yaml  vit8k_300.yaml  vit8k_512.yaml  vit8k_best.yaml
img_cap/manage_data/: data_utils.py  download.sh  log_extract.py  upload.py
img_cap/models/: __init__.py  captioner.py  decoder.py  resnet_encoder.py  vit_encoder.py
img_cap/results/: vit30k_predictions.json  vit30k_scores.txt  vit8k_predictions.json  vit8k_scores.txt
img_cap/utils/: vocab_set.pkl
llm/: README.md  eval.py  main.py  run.sh  run_bptt.sh  run_emsize.sh  train.py  utils.py
llm/models/: __init__.py  rnn.py  speech_tfs.py  tfs.py
vae/: README.md  main.py  min_loss.py
vae/model/: __init__.py  vae.py
vae/vae/: __init__.py  vae.py
