[project]
name = "ai3611"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pycocoevalcap>=1.2",
    "pyyaml>=6.0.2",
    "torch>=1.6.1",
    "torchvision>=0.10.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.10",
]
