[project]
name = "ai3611"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.5.1",
    "fire>=0.7.0",
    "huggingface-hub>=0.30.2",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pycocoevalcap>=1.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch>=1.6.1",
    "torchvision>=0.10.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.10",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
